# astrbot_plugin_ssh_execute_shell

./: .gitignore  DEVELOPMENT_TASKS.md  README.md  WORKING_DOCUMENT.md  _conf_schema.json  config.yaml  config_example.yaml  main.py  metadata.yaml  prototype.py  pyproject.toml  requirements.txt  test_connection.py  test_executor.py
ssh_executor/: __init__.py
ssh_executor/core/: __init__.py  connection.py  executor.py
ssh_executor/exceptions/: __init__.py
ssh_executor/models/: __init__.py  config.py
ssh_executor/utils/: __init__.py  helpers.py
